--- a/adultCensusIncomePrediction.ipynb
+++ b/adultCensusIncomePrediction.ipynb
@@ -224,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
